# pythonocc-core

./: .gitignore  .gitmodules  .landscape.yaml  .travis.build-oce.sh  .travis.build.sh  .travis.yml  AUTHORS  CMakeLists.txt  INSTALL  INSTALL.md  NEWS  README.md  appveyor.yml  apt.txt  azure-pipelines.yml  conda-build.yml  environment.yml
.github/: FUNDING.yml
ci/: move-conda-package.py
ci/appveyor/: appveyor_install_conda.ps1  make-pythonocc-core-msvc.bat  make-pythonocc-core-msys.sh  obvci_appveyor_python_build_env.cmd
ci/conda/: bld.bat  build.sh  conda_build_config.yaml  fix_GeomFill_BSplineCurves_Init_method.patch  fix_graphicshr_location.patch  meta.yaml  run_test.bat  run_test.sh
cmake/: OCCT_Modules.cmake  OCE_Modules.cmake  SMESH_Modules.cmake  __init__.py
cmake/modules/: FindMono.cmake
conda-recipe/: meta.yaml
debian/: README.Debian  README.source  changelog  control  copyright  python3-pythonocc-core.install  pythonocc-core-docs.docs  rules  watch.ex
debian/patches/: FTBS-7.4.1.patch  add-missing-stpfile.patch  series
doc/: README.md
doc/apidoc/: Makefile  OCC.AdvApp2Var.rst  OCC.BRepBuilderAPI.rst  OCC.BRepClass.rst  OCC.BRepExtrema.rst  OCC.CDF.rst  OCC.Display.WebGl.rst  OCC.Display.pyqt4Display.rst  OCC.Display.pysideDisplay.rst  OCC.Display.rst  OCC.Extrema.rst  OCC.FSD.rst  OCC.FairCurve.rst  OCC.GProp.rst  OCC.GarbageCollector.rst  OCC.GccIter.rst  OCC.GeomPlate.rst  OCC.GeomTools.rst  OCC.HLRBRep.rst  OCC.IGESCAFControl.rst  OCC.IntCurvesFace.rst  OCC.IntStart.rst  OCC.InterfaceGraphic.rst  OCC.Intf.rst  OCC.MMgt.rst  OCC.Materials.rst  OCC.PLib.rst  OCC.Quantity.rst  OCC.SMDS.rst  OCC.SMDSAbs.rst  OCC.SMESHDS.rst  OCC.ShapeBuild.rst  OCC.ShapeCustom.rst  OCC.ShapeFix.rst  OCC.StdFail.rst  OCC.StepAP214.rst  OCC.StepVisual.rst  OCC.StlTransfer.rst  OCC.TDataStd.rst  OCC.TDocStd.rst  (+8 more)
doc/examples/: conf.py  helloworld.rst  index.rst  intro.rst  template.rst
doc/examples_fr/: Makefile  conf.py  helloworld_fr.rst  index.rst  intro_fr.rst  make.bat  webgl_fr.rst
doc/getting_started/: README.md  build_install.rst  conf.py  five_minutes.rst  index.rst  intro.rst
examples/: core_2d_fillet.py  core_2d_fillet.rst  core_animation.py  core_animation.rst  core_boolean_fuzzy_cut_emmenthaler.py  core_boolean_fuzzy_cut_emmenthaler.rst  core_boolean_volume_maker.py  core_classic_occ_bottle.py  core_classic_occ_bottle.rst  core_debug_openlocalcontext.py  core_dimensions.py  core_dimensions.rst  core_display_background_gradient_color.py  core_display_background_gradient_color.rst  core_display_background_image.py  core_display_background_image.rst  core_display_callbacks.py  core_display_callbacks.rst  core_display_camera_projection.py  core_display_camera_projection.rst  core_display_clip_planes.py  core_display_clip_planes.rst  core_display_customize_linewidth.py  core_display_customize_linewidth.rst  core_display_customize_prs3d.py  core_display_customize_prs3d.rst  core_display_export_to_EF.py  core_display_export_to_EF.rst  core_display_export_to_image.py  core_display_export_to_image.rst  core_display_line_properties.py  core_display_line_properties.rst  core_display_overlayered_image.py  core_display_overlayered_lines.py  core_display_overlayered_text.py  core_display_point_cloud.py  core_display_point_cloud.rst  core_display_quality.py  core_display_quality.rst  core_display_raytracing.py  (+169 more)
examples/fonts/: README.md
examples/jupyter_notebooks/: occ_callback.ipynb  occ_classic_bottle.ipynb  occ_helloworld.ipynb  occ_helloworld_slider.ipynb  occ_load_brep.ipynb  occ_load_step_ap203_multiple_shapes.ipynb  occ_load_step_ap203_one_shape.ipynb  occ_smesh_basic_shape.ipynb  occ_torus_mesh_quality.ipynb  occ_triangle_mesh_gmsh.ipynb
examples/mesh/: Readme.md  core_simple_mesh.py
examples/models/: Office_A_20110811.ifc  Ventilator.stp  as1-oc-214.stp  as1_pe_203.stp  curve_geom_plate.igs  face_recognition_sample_part.stp  fan.stl  splinecage.stp  surf114.igs
examples/shaders/: PhongShading.fs  PhongShading.vs  phong.fs.glsl  phong.vs.glsl  pink.fs  pink.uniforms  pink.vs  rgb_fragment_shader.fs  rgb_vertex_shader.vs
pkg/conda/: README.md  build.sh  meta.yaml  run_test.py
src/: Exception.py  GarbageCollector.py  utils.py
src/Addons/: Addons.h  Addons.i  Font3d.cpp  LineItem.cpp  LineItem.h  TextItem.cpp  TextItem.h  TextureItem.cpp  TextureItem.h
src/Display/: .DataExchange.py.un~  OCCViewer.py  OCCViewer.pyi  SimpleGui.py  SimpleGui.pyi  backend.py  backend.pyi  qtDisplay.py  qtDisplay.pyi  tkDisplay.py  tkDisplay.pyi  wxDisplay.py  wxDisplay.pyi
src/Extend/: Common.py  Construct.py  DataExchange.py  DataExchange.pyi  LayerManager.py  LayerManager.pyi  Mesher.py  ShapeFactory.py  ShapeFactory.pyi  Tesselator.py  TopologyUtils.py  TopologyUtils.pyi  layer_mgmt.py  types_lut.py
src/MeshDataSource/: MeshDataSource.cpp  MeshDataSource.h  MeshDataSource.i
src/PkgBase/: Exception.py  __init__.py
src/Splitter/: GEOMAlgo.i  (+3 more)
test/: addons_topology_unittest.py  bench_tesselator_parallel.py  core_display_pyqt4_unittest.py  core_display_pyqt5_unittest.py  core_display_pyqt6_unittest.py  core_display_pyside2_unittest.py  core_display_pyside6_unittest.py  core_display_pyside_unittest.py  core_display_tkinter_unittest.py  core_display_unittest.py  core_display_wx_unittest.py  core_extend_dataexchange_unittest.py  core_extend_shapefactory_unittest.py  core_extend_topology_unittest.py  core_geometry_unittest.py  core_memory_unittest.py  core_meshdatasource_unittest.py  core_ocaf_unittest.py  core_smesh_unittest.py  core_tesselator_unittest.py  core_topology_unittest.py  core_visualization_unittest.py  core_webgl_unittest.py  core_wrapper_features_unittest.py  run_examples_as_tests.py  run_tests.py  test_core_exception.py  test_core_extend_dataexchange.py  test_core_extend_shapefactory.py  test_core_extend_topology.py  test_core_geometry.py  test_core_meshdatasource.py  test_core_numpy.py  test_core_ocaf.py  test_core_tesselator.py  test_core_webgl.py  test_core_wrapper_features.py  test_display_sideeffects.py  test_mypy_classic_occ_bottle.py
(+3340 files in other folders)
